# seekr-hatchery

./: .gitignore  .gitlab-ci.yml  .ruff.toml  AGENTS.md  LICENSE  README.md  REVIEW.md  SECURITY.md  pyproject.toml  reproduce.py  tasks.py
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release.yml  scorecard.yml
.gitlab/ci/: pypi.yml  release.yml  setup.yml  templates.yml  test.yml
.hatchery/: Dockerfile.antigravity  Dockerfile.claude  Dockerfile.codex  Dockerfile.opencode  docker.yaml
.hatchery/tasks/: 2026-03-06-unify.md  2026-03-12-feat-chat.md  2026-03-12-feat-sandbox.md  2026-03-12-feat-spawn-task.md  2026-03-19-fix-from.md  2026-03-19-sandbox-refresh.md  2026-03-20-fix-tests-3.md  2026-03-27-fix-from.md  2026-03-27-fix-pypi-release.md  2026-03-27-use-existing-dockerfile.md  2026-04-02-background.md  2026-04-06-sandbox-exec.md  2026-04-06-shell-command.md  2026-04-15-ls-shorthand.md  2026-04-15-shell-completion.md  2026-04-20-fix-codex.md  2026-04-20-fix-no-commit-docker.md  (+27 more)
docs/: CODEOWNERS
scripts/: heal-wsl-docker.sh
tests/: conftest.py  test_agent_antigravity.py  test_agent_backend.py  test_agent_claude.py  test_agent_codex.py  test_agent_opencode.py  test_cli.py  test_clipboard_image.py  test_docker.py  test_filesystem.py  test_git.py  test_kubectl_proxy.py  test_locks.py  test_logging.py  test_mcp.py  test_mount.py  test_proxy.py  test_pty_proxy.py  test_pure.py  test_sandbox.py  test_seeded_volumes.py  test_session_io.py  test_spawn.py  test_subprocess.py  test_task_io.py  test_tls_proxy.py  test_user_config.py
(+35 files in other folders)
