[project]
name = "seekr-hatchery"
dynamic = ["version"]
description = "Task orchestration CLI for AI coding agents"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "Logan Grado", email = "lgrado@seekr.com" }
]
maintainers = [
    { name = "Logan Grado", email = "lgrado@seekr.com" }
]
requires-python = ">=3.12"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "click>=8.3.1",
    "prompt-toolkit>=3.0.52",
    "pyyaml>=6",
    "pydantic>=2",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]

[project.urls]
Repository = "https://github.com/Seekr-Technologies/seekr-hatchery"

[project.scripts]
hatchery = "seekr_hatchery.cli:main"

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
enable = true

[tool.uv]
cache-keys = [
  { file = "pyproject.toml" },
  { git = { commit = true, tags = true } },
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "ipython>=9.10.0",
    "pytest>=8.0",
    "ruff>=0.15.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "integration: tests that require a real container runtime (skipped by default)",
]
